feature: add first instance of menu with translations

--- a/src/app/translation/locales/en.json
+++ b/src/app/translation/locales/en.json
@@ -1,3 +1,11 @@
 {
-  "message": "Hello from { name}"
+  "message": "Hello from { name}",
+  "MENU": {
+    "role": {
+      "admin": "Administrator"
+    },
+    "sections": {
+      "name": "Talent"
+    }
+  }
 }
