--- a/src/app/translation/locales/es.json
+++ b/src/app/translation/locales/es.json
@@ -1,3 +1,11 @@
 {
-  "message": "Hola! desde { name}"
+  "message": "Hola! desde { name}",
+  "MENU": {
+    "role": {
+      "admin": "Administrador"
+    },
+    "sections": {
+      "name": "Talento"
+    }
+  }
 }
