feature: use getRouteByType to fill main menu with provide router items

--- a/src/app/translation/locales/es.json
+++ b/src/app/translation/locales/es.json
@@ -6,6 +6,9 @@
     },
     "sections": {
       "name": "Talento"
+    },
+    "navigation": {
+      "recruitment": "Reclutamiento"
     }
   }
 }
