feature: add fake route with other name

--- a/src/app/translation/locales/es.json
+++ b/src/app/translation/locales/es.json
@@ -8,7 +8,8 @@
       "name": "Talento"
     },
     "navigation": {
-      "recruitment": "Reclutamiento"
+      "recruitment": "Reclutamiento",
+      "other": "Otra sección"
     }
   }
 }
