--- a/src/app/translation/locales/en.json
+++ b/src/app/translation/locales/en.json
@@ -8,7 +8,8 @@
       "name": "Talent"
     },
     "navigation": {
-      "recruitment": "Recruitment"
+      "recruitment": "Recruitment",
+      "other": "Another section"
     }
   }
 }
