feature: add section header user identiry and section title

--- a/src/app/translation/locales/en.json
+++ b/src/app/translation/locales/en.json
@@ -9,7 +9,7 @@
     },
     "navigation": {
       "recruitment": "Recruitment",
-      "other": "Another section"
+      "fake": "Fake page"
     }
   }
 }
