--- a/src/app/translation/locales/es.json
+++ b/src/app/translation/locales/es.json
@@ -9,7 +9,7 @@
     },
     "navigation": {
       "recruitment": "Reclutamiento",
-      "other": "Otra sección"
+      "fake": "Sección fake"
     }
   }
 }
