--- a/src/modules/recruitment/modules/applicants/presentation/translations/locales/en.json
+++ b/src/modules/recruitment/modules/applicants/presentation/translations/locales/en.json
@@ -1,3 +1,10 @@
 {
-  "applicants": "Applicants"
+  "MENU": {
+    "applicants": "Applicants"
+  },
+  "FORM": {
+    "ADD": {
+      "title": "Create new applicant" 
+    }
+  }
 }
