--- a/src/modules/recruitment/modules/applicants/presentation/translations/locales/es.json
+++ b/src/modules/recruitment/modules/applicants/presentation/translations/locales/es.json
@@ -1,3 +1,8 @@
 {
-  "applicants": "Candidatos"
+  "applicants": "Candidatos",
+  "FORM": {
+    "ADD": {
+      "title": "Crea un nuevo candidato" 
+    }
+  }
 }
