reorganize recruitment and fake files

--- a/src/modules/recruitment/modules/applicants/presentation/translations/locales/en.json
+++ b/src/modules/recruitment/modules/applicants/presentation/translations/locales/en.json
@@ -1,7 +1,5 @@
 {
-  "MENU": {
-    "applicants": "Applicants"
-  },
+  "applicants": "Applicants",
   "FORM": {
     "ADD": {
       "title": "Create new applicant" 
