feature: add message to loadingIs abstract component

--- a/src/modules/vacancy/presentation/translations/locales/es.json
+++ b/src/modules/vacancy/presentation/translations/locales/es.json
@@ -1,3 +1,6 @@
 {
-  "positions": "Vacantes"
+  "positions": "Vacantes",
+  "BOARD": {
+    "loading": "El tablero de vacantes está por llegar..."
+  }
 }
