feature: show vacancy areas with dynamic type and title

--- a/src/modules/vacancy/presentation/translations/locales/en.json
+++ b/src/modules/vacancy/presentation/translations/locales/en.json
@@ -1,6 +1,13 @@
 {
   "positions": "Positions",
   "BOARD": {
-    "loading": "The vacancy board is coming..."
+    "loading": "The vacancy board is coming...",
+    "AREAS": {
+      "new": "New",
+      "accepted": "Accepted",
+      "interview": "Interview",
+      "selected": "Hired",
+      "discarded": "Not selected"
+    } 
   }
 }
