--- a/src/modules/vacancy/presentation/translations/locales/en.json
+++ b/src/modules/vacancy/presentation/translations/locales/en.json
@@ -7,7 +7,8 @@
       "accepted": "Accepted",
       "interview": "Interview",
       "selected": "Hired",
-      "discarded": "Not selected"
+      "discarded": "Not selected",
+      "loading": "We are updating the statuses of the vacancy candidates"
     } 
   }
 }
