feature: add base form with one input and his handle validation

--- a/src/modules/applicant/presentation/translations/locales/en.json
+++ b/src/modules/applicant/presentation/translations/locales/en.json
@@ -2,7 +2,8 @@
   "applicants": "Applicants",
   "FORM": {
     "ADD": {
-      "title": "Create new applicant" 
+      "title": "Create new applicant",
+      "action": "Add applicant"
     }
   }
 }
