feature: add all card info

--- a/src/modules/applicant/presentation/translations/locales/en.json
+++ b/src/modules/applicant/presentation/translations/locales/en.json
@@ -5,5 +5,8 @@
       "title": "Create new applicant",
       "action": "Add applicant"
     }
+  },
+  "INFO": {
+    "createBy": "Added by { user }"
   }
 }
