feature: add date comparison and show today label if correspond

--- a/src/modules/applicant/presentation/translations/locales/es.json
+++ b/src/modules/applicant/presentation/translations/locales/es.json
@@ -7,6 +7,7 @@
     }
   },
   "INFO": {
-    "createBy": "Añadido por { user }"
+    "createBy": "Añadido por { user }",
+    "today": "Hoy"
   }
 }
